@@ -292,9 +292,11 @@ I dedicate this module to my visit in Málaga.
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2015-2023 Michal Josef Špaček
- Artistic License
- BSD 2-Clause License
+© 2015-2023 Michal Josef Špaček
+
+Artistic License
+
+BSD 2-Clause License
 
 =head1 VERSION
 
