@@ -217,9 +217,11 @@ DEDICATION
     I dedicate this module to my visit in Málaga.
 
 LICENSE AND COPYRIGHT
-     © 2015-2023 Michal Josef Špaček
-     Artistic License
-     BSD 2-Clause License
+    © 2015-2023 Michal Josef Špaček
+
+    Artistic License
+
+    BSD 2-Clause License
 
 VERSION
     0.16
